version 1.1.0
- cellwise logger now warns when it encounters a duplicate key (this will corrupt
  logging info).
- 'run_file' gains argument 'envir'.
- new function 'source_file', with behaviour close to 'source'.
- stop_log now has 'dump' argument (default: TRUE) and passes ellipsis to $dump() method.

version 1.0.3
- fixed test that triggered a CRAN error because it wrote in the installed
  area (Thanks to Kurt Hornik).

version 1.0.2
- fixed error caught on CRAN/Debian (an example wrote locally)

version 1.0.1
- fixed error caught on CRAN/Debian (an example wrote locally)

version 1.0.0
- Start tracking changes in R objects, by adding a single line of code to
  an existing script.
- New function 'run_file', track changes in scripts without '%L>%'
- Support for multiple loggers; loggers can now support an (automatic) label
  which is used to distinguish output files when multiple datasets are tracked.
- Argument 'log' is replaced by 'logger' in start_log(), dump_log() et al.
- Completely new vignette. Removed dependence on knitr.
- Completely reviewed the reference manual.
- Switched to 'tinytest' testing framework.

version 0.3.0
- '%L>%' is now considered the default lumberjack operator. '%>>%' remains as alias.
- Added 'expression_logger': log custom expressions
- Logging now also works for functions that remove the logging attribute.
- The 'cellwise' logger is now compatible with 'tibble' objects (thanks to
  Blain Bateman). 
- Some documentation improvements.

version 0.2.0
- Added '%L>%' as synonym to avoid possible confusion with 'pipeR::`%>>%`'
- Argument 'stop' of 'dump_log' is now 'TRUE' by default (was 'FALSE')
- New logger named 'filedump' dumps data versions to csv.
- Function 'stop_log()' will now call '<logger>$stop()' if defined.
- Package now depends on R >= 3.4.0. Some tests failed on Windows/OSX + R3.3.3

version 0.1.0
- initial release